# RISCV-verilog

./: .gitmodules  CMakeLists.txt  README.md
examples/: fib.c  fib_rec.c  simV_fib.trace  simV_fib_rec.trace
regpipe/: pipe_tf.v
src/: CMakeLists.txt  adder.v  alu.v  aludec.v  aluop.v  consts.v  controller.v  datapath.v  dmem.v  flopr.v  hazard.v  imem.v  immSel.v  main.cc  maindec.v  mips.v  mux2.v  mux3.v  mux4.v  opcodes.v  pcReg.v  rPipe.v  regfile.v  riscv.v  setForward.v  sext.v  sl2.v  top.v  top_tf.v
